@@ -1,5 +1,25 @@
+PatchReader is Copyright (C) 2003-2004, John Keiser
+           and Copyright (C) 2011-2012, Teemu Mannermaa.
+
 PatchReader is a set of utilities for reading in, transforming, and doing
-various other things with a patch.  It basically allows you to create a chain of
-readers that can read a patch, remove files from a patch, add CVS context, fix
-up the patch root according to CVS, and output the patch as raw unified or
+various other things with a patch. It basically allows you to create a chain
+of readers that can read a patch, remove files from a patch, add CVS context,
+fix up the patch root according to CVS, and output the patch as raw unified or
 through a template processor (used in some places to output a patch as HTML).
+
+LICENSE INFORMATION
+
+This module is free software; you can redistribute it and/or modify it under
+the terms of the Artistic License 1.0. For details, see the full text of the
+license at <http://www.perlfoundation.org/artistic_license_1_0>.
+
+This module is distributed in the hope that it will be useful, but it is
+provided “as is” and without any warranty; without even the implied warranty
+of merchantability or fitness for a particular purpose.
+
+Files with different licenses or copyright holders:
+
+lib/PatchReader/CVSClient.pm:
+ Portions created by Netscape are
+  Copyright (C) 2003, Netscape Communications Corporation. All rights reserved.
+ This file is subject to the terms of the Mozilla Public License, v. 2.0.
