@@ -19,3 +19,4 @@
   Multiple file patch support (RT bug #47625)
 0.9.7 7/x/2012
   Add a Build.PL script to optionally build with Module::Build
+  Add author, copyright and licensing information
